# Task30_2

./: CMakeLists.txt
Task30_2/: CMakeLists.txt  Task30_2.cpp
